[gd_scene load_steps=8 format=3 uid="uid://bukpxr3o7sws7"]

[ext_resource type="Script" uid="uid://ifatvxy1mdkw" path="res://Scripts/sapo.gd" id="1_cu08n"]
[ext_resource type="Texture2D" uid="uid://cq4jpaqsaminu" path="res://icon.svg" id="2_srx5o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bgm2x"]

[sub_resource type="Animation" id="Animation_dpjaf"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.0987284, 0.0987284, 0.0987284, 1)]
}

[sub_resource type="Animation" id="Animation_p4dva"]
resource_name = "linguada"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.329076, 0.880115, 0.475642, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("damage_area:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_cu08n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("damage_area:enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_07w51"]
_data = {
&"RESET": SubResource("Animation_cu08n"),
&"idle": SubResource("Animation_dpjaf"),
&"linguada": SubResource("Animation_p4dva")
}

[node name="sapo" type="CharacterBody2D"]
script = ExtResource("1_cu08n")

[node name="sprite" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_srx5o")

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_bgm2x")

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_07w51")
}
autoplay = "idle"

[node name="damage_area" type="RayCast2D" parent="."]
enabled = false
target_position = Vector2(50, 0)

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
